tests/NormalTests/paczka1/fuzzy1/16328867.err
Error in line 5: RImUKeYCX8 A903 49,7
Error in line 24: 4PnmK A506 2รณ9,7
Error in line 11: 4PnmK A506 68,1
Error in line 33: 4PnmK A702 13,0
Error in line 38: 4PnmK A903 7,75
